# capacito

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/capacito/: capacito.h
proto/: capacito.proto
proto/objects/: project.proto
schema/postgres/: project.sql
schema/spanner/: project.sql
scripts/: build.sh  deploy-schema-postgres.sh  deploy-schema-spanner.sh  gen-schema.sh  test.sh
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  placeholder_test.cc
tools/: protoc-gen-sql
